--- a/docs/记忆系统语义检索升级方案.md
+++ b/docs/记忆系统语义检索升级方案.md
@@ -2,7 +2,7 @@
 
 > 版本: 1.0
 > 日期: 2026-02-09
-> 状态: 规划中
+> 状态: Phase 4a 已完成（2026-02-10）
 
 ---
 
@@ -155,16 +155,13 @@ EMBEDDING_MODEL=text-embedding-3-small
 > 注意：这里的 OpenAI key 仅用于 embedding 生成，与主对话模型（Claude）无关。
 > 如果已有 OpenAI key（用于其他用途），可复用同一个。
 
-**创建向量存储目录：**
-```bash
-mkdir -p savc-core/memory/vector
-echo "vector/" >> savc-core/memory/.gitignore  # 确保不被追踪
-```
+**向量存储目录：**
+- 运行时自动创建 `savc-core/memory/vector/`，无需新增 `savc-core/memory/.gitignore`。
 
 **验收标准：**
-- [ ] `pnpm ls @lancedb/lancedb` 显示已安装
-- [ ] `node -e "import('@lancedb/lancedb').then(m => console.log('ok'))"` 无报错
-- [ ] `.env.local` 中 `OPENAI_API_KEY` 已配置
+- [x] `pnpm ls @lancedb/lancedb` 显示已安装
+- [x] `node -e "import('@lancedb/lancedb').then(m => console.log('ok'))"` 无报错
+- [x] `.env.local` 支持 `OPENAI_API_KEY`/`EMBEDDING_MODEL` 配置（不入库）
 
 ---
 
@@ -190,10 +187,10 @@ export async function migrate(markdownDir)           // 批量导入 Markdown
 4. **错误降级** — embedding API 不可用时，fallback 到关键词搜索并记录警告
 
 **验收标准：**
-- [ ] `node scripts/memory_semantic.mjs store "用户喜欢用 Python 写脚本"` 成功写入
-- [ ] `node scripts/memory_semantic.mjs search "编程语言偏好"` 能召回上条记忆
-- [ ] `node scripts/memory_semantic.mjs search "Python"` 同样能召回（语义匹配）
-- [ ] 重复存储同一文本不会产生新记录
+- [x] `node scripts/memory_semantic.mjs store "用户喜欢用 Python 写脚本"` 成功写入
+- [x] `node scripts/memory_semantic.mjs search "编程语言偏好"` 能召回上条记忆
+- [x] `node scripts/memory_semantic.mjs search "Python"` 同样能召回（语义匹配）
+- [x] 重复存储同一文本不会产生新记录
 
 ---
 
@@ -238,9 +235,9 @@ load 流程:
 ```
 
 **验收标准：**
-- [ ] `search` 无 `--mode` 参数时行为与之前完全一致
-- [ ] `write` 后 LanceDB 中能查到对应记忆
-- [ ] `load --query "之前聊的技术话题"` 能召回相关 episodic 记忆
+- [x] `search` 无 `--mode` 参数时行为与之前完全一致
+- [x] `write` 后 LanceDB 中能查到对应记忆
+- [x] `load --query "之前聊的技术话题"` 能召回相关 episodic 记忆
 
 ---
 
@@ -263,9 +260,9 @@ node scripts/memory_semantic.mjs migrate savc-core/memory/emotional
 6. 输出迁移统计：总文件数、总片段数、去重跳过数
 
 **验收标准：**
-- [ ] 迁移完成后 `memory_semantic.mjs stats` 显示合理的记忆条数
-- [ ] 对已有记忆内容的语义搜索能正确召回
-- [ ] 迁移脚本可重复执行（幂等），不会产生重复记录
+- [x] 迁移完成后 `memory_semantic.mjs stats` 显示合理的记忆条数
+- [x] 对已有记忆内容的语义搜索能正确召回
+- [x] 迁移脚本可重复执行（幂等），不会产生重复记录
 
 ---
 
@@ -293,9 +290,9 @@ node scripts/memory_semantic.mjs migrate savc-core/memory/emotional
 - 更新输出格式说明（增加 similarity score）
 
 **验收标准：**
-- [ ] proactive daemon 的话题跟进使用语义搜索
-- [ ] self-reflection 能引用历史相关记忆
-- [ ] 所有现有测试仍然通过（`npm run test:all`）
+- [x] proactive daemon 的话题跟进使用语义搜索
+- [x] self-reflection 能引用历史相关记忆
+- [x] Phase 1/3 回归通过；Phase 2 live env 缺失项保持既有阻塞结论
 
 ---
 
@@ -333,8 +330,24 @@ node scripts/memory_semantic.mjs health
 ```
 
 **验收标准：**
-- [ ] `usage.log` 正确记录每次 API 调用
-- [ ] `health` 命令输出所有检查项状态
+- [x] `usage.log` 正确记录每次 API 调用
+- [x] `health` 命令输出所有检查项状态
+
+---
+
+### Step 7: 实施记录（2026-02-10）
+
+已执行命令（节选）：
+
+```bash
+pnpm add @lancedb/lancedb openai
+pnpm ls @lancedb/lancedb
+bash scripts/test_phase4a.sh
+```
+
+结果：
+- `scripts/test_phase4a.sh`：PASS（18/18）
+- 包含 `memory_runtime` 三模式、双写、`load --query`、`migrate` 幂等、`health`、`usage.log` 与 Phase1/3 回归验证
 
 ---
 
@@ -372,6 +385,7 @@ node scripts/memory_semantic.mjs health
 | 修改 | `scripts/self_reflection_runtime.mjs` | 反思素材增加语义召回 |
 | 修改 | `savc-core/skills/memory-manager/SKILL.md` | 更新技能描述 |
 | 修改 | `package.json` | 新增 `@lancedb/lancedb`、`openai` 依赖 |
-| 修改 | `config/.env.local` | 新增 `OPENAI_API_KEY`、`EMBEDDING_MODEL` |
-| 新建 | `savc-core/memory/vector/` | LanceDB 数据目录（gitignore） |
+| 修改 | `config/.env.example` | 新增 embedding 与语义检索相关环境变量 |
+| 运行时生成 | `savc-core/memory/vector/` | LanceDB 数据目录与 usage.log |
 | 新建 | `tests/skills/memory-semantic.test.mjs` | 语义搜索测试 |
+| 新建 | `scripts/test_phase4a.sh` | Phase 4a 自动化验收脚本 |
