phase 4收尾与 phase5 首推进

--- a/docs/记忆系统语义检索升级方案.md
+++ b/docs/记忆系统语义检索升级方案.md
@@ -2,7 +2,7 @@
 
 > 版本: 1.0
 > 日期: 2026-02-09
-> 状态: Phase 4a 已完成（2026-02-10）
+> 状态: Phase 4a 已完成并完成收尾增强（2026-02-10）
 
 ---
 
@@ -346,8 +346,27 @@ bash scripts/test_phase4a.sh
 ```
 
 结果：
-- `scripts/test_phase4a.sh`：PASS（18/18）
-- 包含 `memory_runtime` 三模式、双写、`load --query`、`migrate` 幂等、`health`、`usage.log` 与 Phase1/3 回归验证
+- `scripts/test_phase4a.sh`：PASS（25/25）
+- 包含 `memory_runtime` 三模式、双写、`load --query`、`auto-recall`、`auto-capture`、时间衰减字段、`migrate` 幂等、`health`、`usage.log` 与 Phase1/3 回归验证
+
+---
+
+### Step 8: 收尾增强记录（2026-02-10）
+
+已执行命令（节选）：
+
+```bash
+node tests/skills/memory-semantic-local.test.mjs
+node scripts/memory_runtime.mjs auto-recall --workspace /tmp/savc_phase4a_runtime/savc-core --query "Python" --json
+node scripts/memory_runtime.mjs auto-capture --workspace /tmp/savc_phase4a_runtime/savc-core --text "请记住：我偏好 TypeScript" --json
+bash scripts/test_phase4a.sh
+```
+
+本轮新增能力：
+- [x] **本地 Embedding 模式**：`SAVC_EMBEDDING_MODE=local`，支持本地 endpoint（如 Ollama）
+- [x] **时间衰减评分**：`score = rawScore × decay(age)`，并输出 `rawScore/decay/ageDays`
+- [x] **Auto-Recall**：新增 `memory_semantic auto-recall` / `memory_runtime auto-recall`
+- [x] **Auto-Capture**：新增 `memory_semantic auto-capture` / `memory_runtime auto-capture`
 
 ---
 
@@ -363,15 +382,13 @@ bash scripts/test_phase4a.sh
 
 ---
 
-## 5. 后续演进方向
+## 5. 后续演进方向（更新）
 
-完成本方案后，可进一步考虑：
-
-1. **本地 Embedding 模型** — 通过 Ollama 运行本地 embedding（如 `nomic-embed-text`），彻底消除外部 API 依赖和成本
-2. **记忆重要性衰减** — 引入时间衰减因子，近期记忆权重更高：`final_score = similarity × decay(age)`
-3. **记忆聚类与整理** — 定期对向量空间做聚类，自动发现主题并生成摘要
-4. **Auto-Capture 集成** — 参考 OpenClaw memory-lancedb 的 auto-capture 规则，在对话结束时自动提取值得记住的信息
-5. **Auto-Recall 集成** — 在对话开始前自动注入相关记忆到系统提示词，无需手动 `load --query`
+1. [x] **本地 Embedding 模型** — 已支持 `local` 模式（默认 endpoint: `http://127.0.0.1:11434/api/embeddings`）
+2. [x] **记忆重要性衰减** — 已支持时间衰减重排：`final_score = similarity × decay(age)`
+3. [ ] **记忆聚类与整理** — 定期对向量空间做聚类，自动发现主题并生成摘要
+4. [x] **Auto-Capture 集成** — 已提供自动提取与语义写入命令
+5. [x] **Auto-Recall 集成** — 已提供自动召回上下文命令
 
 ---
 
@@ -381,11 +398,14 @@ bash scripts/test_phase4a.sh
 |---|---|---|
 | 新建 | `scripts/memory_semantic.mjs` | 语义适配层 |
 | 修改 | `scripts/memory_runtime.mjs` | 增加 `--mode` 参数，双写逻辑 |
+| 修改 | `scripts/memory_runtime.mjs` | 新增 `auto-recall` / `auto-capture` 命令 |
 | 修改 | `scripts/proactive_daemon.mjs` | 话题跟进改用语义搜索 |
 | 修改 | `scripts/self_reflection_runtime.mjs` | 反思素材增加语义召回 |
 | 修改 | `savc-core/skills/memory-manager/SKILL.md` | 更新技能描述 |
 | 修改 | `package.json` | 新增 `@lancedb/lancedb`、`openai` 依赖 |
 | 修改 | `config/.env.example` | 新增 embedding 与语义检索相关环境变量 |
+| 修改 | `scripts/memory_semantic.mjs` | 新增 local embedding、时间衰减、auto-recall、auto-capture |
 | 运行时生成 | `savc-core/memory/vector/` | LanceDB 数据目录与 usage.log |
 | 新建 | `tests/skills/memory-semantic.test.mjs` | 语义搜索测试 |
+| 新建 | `tests/skills/memory-semantic-local.test.mjs` | 本地 embedding 模式测试 |
 | 新建 | `scripts/test_phase4a.sh` | Phase 4a 自动化验收脚本 |
