fix: restore savc-orchestrator and harden session defaults

--- a/docs/worklog/2026-02-15.md
+++ b/docs/worklog/2026-02-15.md
@@ -38,3 +38,29 @@
   - `openclaw config get agents.defaults.heartbeat` 返回 `{"session":"heartbeat-main"}`。
   - `openclaw agent --channel telegram --to 6260789852 --message "哈喽" --json`：PASS（正常中文回复）。
   - 会话索引新增 `agent:main:heartbeat-main`，说明心跳已与主对话隔离。
+
+## 记录 03
+
+- 对话目标：继续后续开发计划（暂不处理管理界面重构），优先修复编排主链可用性并固化会话隔离默认配置。
+- 执行内容：
+  - 从 `openclaw-history.bundle` 挂载 `bundle/savc-extensions` 分支并恢复 `openclaw/extensions/savc-orchestrator` 全量实现（含 `savc_route` / `savc_decompose` / `savc_spawn_expert` / `savc_agent_status` / `savc_voice_call` / `savc_image_generate` 及测试）。
+  - 安装并构建 `openclaw` 子项目依赖，恢复 `dist/entry.js` 供网关/插件命令正常运行。
+  - 更新 `scripts/setup.sh`：默认写入 `session.dmScope=per-channel-peer` 与 `agents.defaults.heartbeat.session=heartbeat-main`。
+  - 更新 `scripts/llm_enable_failover.sh`：在补丁模式下同步写入上述会话隔离字段，避免仅改模型链时丢失会话安全设置。
+  - 更新 `README.md`：补充会话隔离默认行为说明。
+- 修改文件：
+  - `openclaw/extensions/savc-orchestrator/`（恢复）
+  - `scripts/setup.sh`（更新）
+  - `scripts/llm_enable_failover.sh`（更新）
+  - `README.md`（更新）
+  - `docs/worklog/2026-02-15.md`（更新）
+- 验证结果：
+  - `cd openclaw && pnpm exec vitest run extensions/savc-orchestrator/src/*.test.ts`：PASS（7 files, 24 tests）
+  - `bash scripts/test_phase4b_plugin.sh`：PASS
+  - `bash scripts/test_phase5d.sh`：PASS
+  - `bash scripts/test_phase5e.sh`：PASS（live smoke 按默认配置跳过）
+  - `bash scripts/test_phase5.sh`：PASS（5c/5d/5e 全通过）
+  - `bash -n scripts/setup.sh scripts/llm_enable_failover.sh`：PASS
+  - `bash scripts/llm_enable_failover.sh --dry-run` 输出包含：
+    - `session.dmScope = per-channel-peer`
+    - `agents.defaults.heartbeat.session = heartbeat-main`
