feat(phase6): add live2d signal layer and stabilize phase5/6 tests

--- a/docs/worklog/2026-02-15.md
+++ b/docs/worklog/2026-02-15.md
@@ -64,3 +64,86 @@
   - `bash scripts/llm_enable_failover.sh --dry-run` 输出包含：
     - `session.dmScope = per-channel-peer`
     - `agents.defaults.heartbeat.session = heartbeat-main`
+
+## 记录 04
+
+- 对话目标：确认当前整体项目阶段进度与可交付状态。
+- 执行内容：
+  - 检查最近提交与工作区状态，确认已落地里程碑与未提交改动范围。
+  - 核对 `README.md` 与 `docs/SAVC功能拓展路线图.md` 的阶段状态声明。
+  - 执行 `scripts/test_phase_status.sh` 获取阶段级测试快照，并读取 `phase2` 失败日志定位原因。
+- 修改文件：
+  - `docs/worklog/2026-02-15.md`（更新）
+- 验证结果：
+  - 阶段状态：Phase 0~5 完成，Phase 6 计划中（M-F1~M-F5 待实现）。
+  - `scripts/test_phase_status.sh`：Phase 1 PASS，Phase 2 FAIL（`live smoke env missing`），Phase 3 PASS。
+  - 近期核心回归：`test_phase4b_plugin.sh`、`test_phase5.sh` 均 PASS（本次会话已验证）。
+
+## 记录 05
+
+- 对话目标：在不涉及管理界面重构的前提下，启动 Phase 6 首批开发（非 UI 基础层）。
+- 执行内容：
+  - 新增 `savc-core/orchestrator/live2d.mjs`，实现 `phase6-v1` 信号协议：
+    - 情绪标签标准化与表情参数映射（emotion -> expression/motion）
+    - mock 口型帧生成（voice text -> lipSync frames）
+    - 交互动作信号映射（interaction -> motion）
+  - 新增 `savc_live2d_signal` 工具并接入 `savc-orchestrator`：
+    - `openclaw/extensions/savc-orchestrator/src/tool-live2d-signal.ts`
+    - 注册到 `openclaw/extensions/savc-orchestrator/index.ts`
+    - 扩展 `paths.ts`/`types.ts` 以加载并约束 `live2d.mjs` 模块
+  - 新增 `savc-core/agents/live2d.yaml`，并更新 `router.mjs`/`router.test.mjs` 支持 Live2D 请求路由。
+  - 新增阶段脚本与报告：
+    - `scripts/test_phase6.sh`
+    - `tests/phase6-test-report.md`
+    - `package.json` 增加 `test:phase6`
+  - 更新文档状态：`README.md`、`docs/SAVC功能拓展路线图.md` 标注 Phase 6“基础信号层进行中”。
+- 修改文件：
+  - `savc-core/orchestrator/live2d.mjs`（新增）
+  - `tests/orchestrator/live2d.test.mjs`（新增）
+  - `savc-core/agents/live2d.yaml`（新增）
+  - `savc-core/orchestrator/router.mjs`（更新）
+  - `tests/orchestrator/router.test.mjs`（更新）
+  - `openclaw/extensions/savc-orchestrator/src/tool-live2d-signal.ts`（新增）
+  - `openclaw/extensions/savc-orchestrator/src/tool-live2d-signal.test.ts`（新增）
+  - `openclaw/extensions/savc-orchestrator/src/paths.ts`（更新）
+  - `openclaw/extensions/savc-orchestrator/src/types.ts`（更新）
+  - `openclaw/extensions/savc-orchestrator/index.ts`（更新）
+  - `openclaw/extensions/savc-orchestrator/README.md`（更新）
+  - `openclaw/extensions/savc-orchestrator/openclaw.plugin.json`（更新）
+  - `scripts/phase5_enable_plugins.sh`（更新）
+  - `scripts/test_phase4b.sh`（更新）
+  - `scripts/test_phase6.sh`（新增）
+  - `tests/phase6-test-report.md`（新增）
+  - `package.json`（更新）
+  - `README.md`（更新）
+  - `docs/SAVC功能拓展路线图.md`（更新）
+  - `docs/worklog/2026-02-15.md`（更新）
+- 验证结果：
+  - `node tests/orchestrator/live2d.test.mjs`：PASS
+  - `cd openclaw && pnpm exec vitest run extensions/savc-orchestrator/src/*.test.ts`：PASS（8 files, 27 tests）
+  - `bash scripts/test_phase6.sh`：PASS
+  - `bash scripts/test_phase4b.sh`：PASS（含 live2d 路由场景）
+  - `bash scripts/test_phase5.sh`：PASS（5c/5d/5e 回归通过）
+
+## 记录 06
+
+- 对话目标：修复 `savc_voice_call` 在 Phase 5d/6 验收脚本中的回归失败，并恢复阶段回归稳定性。
+- 执行内容：
+  - 复现并定位 `scripts/test_phase5d.sh` 的 `savc_voice_call initiate failed` 问题，确认根因是 `voice-call` 使用全局持久化目录，存在历史未结束通话导致并发上限命中。
+  - 更新 `scripts/test_phase5d.sh`：
+    - 向临时配置注入独立 `voice-call` `store` 路径（`TMP_ROOT/voice-store`）。
+    - 保留并继续使用临时 webhook 端口，确保测试环境隔离且可重复执行。
+  - 更新 `scripts/test_phase6.sh`：
+    - 同样注入独立 `voice-call` `store` 路径与临时 webhook 端口。
+    - 在 `savc_voice_call initiate` 后新增 `end` 收尾步骤，避免再次写入未结束通话。
+    - 新增 end 响应断言，补齐脚本闭环。
+- 修改文件：
+  - `scripts/test_phase5d.sh`（更新）
+  - `scripts/test_phase6.sh`（更新）
+  - `docs/worklog/2026-02-15.md`（更新）
+- 验证结果：
+  - `bash scripts/test_phase5d.sh`：PASS（18 PASS, 0 FAIL）
+  - `bash scripts/test_phase6.sh`：PASS（18 PASS, 0 FAIL）
+  - `bash scripts/test_phase5.sh`：PASS（5c/5d/5e 全通过）
+- 备注：
+  - 该修复不改业务逻辑，只增强测试隔离性与可重复性，避免用户本机历史状态污染阶段验收。
