feat(phase6): decompose interaction+voice into live2d->voice chain

--- a/docs/worklog/2026-02-15.md
+++ b/docs/worklog/2026-02-15.md
@@ -179,3 +179,23 @@
   - `node tests/orchestrator/lifecycle.test.mjs`：PASS
   - `bash scripts/test_phase6.sh`：PASS（19 PASS, 0 FAIL）
   - `bash scripts/test_phase5.sh`：PASS（5c/5d/5e 全通过）
+
+## 记录 08
+
+- 对话目标：按“推进一步，提交一步”继续 Phase 6，补齐 M-F4 的编排层联动能力（非 UI）。
+- 执行内容：
+  - 更新 `savc-core/orchestrator/decomposer.mjs`：
+    - 新增 `hasLive2DSignal` / `hasInteractionSignal` / `hasVoiceSignal` 检测。
+    - 新增联动规则：当请求同时包含 Live2D 交互与语音信号时，自动拆解为串行任务 `live2d -> voice`。
+  - 更新 `tests/orchestrator/decomposer.test.mjs`：
+    - 增加 `点击模型并语音播报一句欢迎回来` 场景断言，验证 `live2d -> voice` 与依赖关系。
+  - 更新 `scripts/test_phase6.sh`：
+    - 增加 `decomposer` 链路校验，确保阶段脚本中可直接验收交互+语音联动拆解。
+- 修改文件：
+  - `savc-core/orchestrator/decomposer.mjs`（更新）
+  - `tests/orchestrator/decomposer.test.mjs`（更新）
+  - `scripts/test_phase6.sh`（更新）
+  - `docs/worklog/2026-02-15.md`（更新）
+- 验证结果：
+  - `node tests/orchestrator/decomposer.test.mjs`：PASS
+  - `bash scripts/test_phase6.sh`：PASS（20 PASS, 0 FAIL）
