feat(phase6): support task-based live2d signal inference

--- a/docs/worklog/2026-02-15.md
+++ b/docs/worklog/2026-02-15.md
@@ -199,3 +199,32 @@
 - 验证结果：
   - `node tests/orchestrator/decomposer.test.mjs`：PASS
   - `bash scripts/test_phase6.sh`：PASS（20 PASS, 0 FAIL）
+
+## 记录 09
+
+- 对话目标：按“推进一步，提交一步”继续 Phase 6，增强 `savc_live2d_signal` 工具的任务文本自动推断能力。
+- 执行内容：
+  - 更新 `openclaw/extensions/savc-orchestrator/src/tool-live2d-signal.ts`：
+    - 新增 `task` 参数（自然语言任务文本）。
+    - 当 `task` 存在且 `buildLive2DPlan` 可用时，走计划推断路径，自动解析 source/emotion/interaction 并产出信号。
+    - 保持原有 `source/message` 显式模式兼容，未传 `task` 时行为不变。
+  - 更新 `openclaw/extensions/savc-orchestrator/src/types.ts`：
+    - 增加 `Live2DPlanResult` 类型与 `Live2DModule.buildLive2DPlan` 可选签名。
+  - 更新 `openclaw/extensions/savc-orchestrator/src/tool-live2d-signal.test.ts`：
+    - 新增 `task` 推断单测，断言 `buildLive2DPlan` 调用与返回 source=voice。
+  - 更新 `scripts/test_phase6.sh`：
+    - 增加 `savc_live2d_signal` 的 task 推断调用与断言（验证 `source=voice` 且含 `lipSync` 帧）。
+  - 更新文档：
+    - `openclaw/extensions/savc-orchestrator/README.md` 补充 `task` 参数说明。
+    - `tests/phase6-test-report.md` 补充 task 推断验收项。
+- 修改文件：
+  - `openclaw/extensions/savc-orchestrator/src/tool-live2d-signal.ts`（更新）
+  - `openclaw/extensions/savc-orchestrator/src/tool-live2d-signal.test.ts`（更新）
+  - `openclaw/extensions/savc-orchestrator/src/types.ts`（更新）
+  - `scripts/test_phase6.sh`（更新）
+  - `openclaw/extensions/savc-orchestrator/README.md`（更新）
+  - `tests/phase6-test-report.md`（更新）
+  - `docs/worklog/2026-02-15.md`（更新）
+- 验证结果：
+  - `cd openclaw && pnpm exec vitest run extensions/savc-orchestrator/src/tool-live2d-signal.test.ts`：PASS（4 tests）
+  - `bash scripts/test_phase6.sh`：PASS（21 PASS, 0 FAIL）
