feat(phase6): bridge spawn_expert outputs to live2d signals

--- a/docs/worklog/2026-02-15.md
+++ b/docs/worklog/2026-02-15.md
@@ -249,3 +249,30 @@
 - 验证结果：
   - `node tests/orchestrator/live2d-voice-chain.test.mjs`：PASS
   - `bash scripts/test_phase6.sh`：PASS（23 PASS, 0 FAIL）
+
+## 记录 11
+
+- 对话目标：继续 Phase 6，补齐 `savc_spawn_expert` 到 Live2D 信号层的桥接输出（后端链路增强）。
+- 执行内容：
+  - 更新 `openclaw/extensions/savc-orchestrator/src/tool-spawn-expert.ts`：
+    - 在专家任务完成后自动尝试构建 `live2d` 结构（`attempted/source/emotion/interactionType/signal/error`）。
+    - 优先走 `buildLive2DPlan`，回退到 `buildLive2DSignal`，并保证失败时不影响 `spawn_expert` 主流程成功返回。
+    - 日志中增加 `live2d=on/off` 标记，便于排障。
+  - 更新 `openclaw/extensions/savc-orchestrator/src/tool-spawn-expert.test.ts`：
+    - 增加 Live2D 成功桥接断言。
+    - 增加 Live2D 模块加载失败时“主流程仍成功”的容错断言。
+  - 更新 `scripts/test_phase6.sh`：
+    - 增加网关下 `savc_spawn_expert` 调用与 `live2d.signal` 断言（`phase6-v1` + `source=voice`）。
+  - 更新文档：
+    - `openclaw/extensions/savc-orchestrator/README.md` 补充 `savc_spawn_expert` 的 `live2d` 返回说明。
+    - `tests/phase6-test-report.md` 增加桥接验收项。
+- 修改文件：
+  - `openclaw/extensions/savc-orchestrator/src/tool-spawn-expert.ts`（更新）
+  - `openclaw/extensions/savc-orchestrator/src/tool-spawn-expert.test.ts`（更新）
+  - `scripts/test_phase6.sh`（更新）
+  - `openclaw/extensions/savc-orchestrator/README.md`（更新）
+  - `tests/phase6-test-report.md`（更新）
+  - `docs/worklog/2026-02-15.md`（更新）
+- 验证结果：
+  - `cd openclaw && pnpm exec vitest run extensions/savc-orchestrator/src/tool-spawn-expert.test.ts`：PASS（7 tests）
+  - `bash scripts/test_phase6.sh`：PASS（24 PASS, 0 FAIL）
