feat(phase6): add live2d bridge payload to agent_status

--- a/docs/worklog/2026-02-15.md
+++ b/docs/worklog/2026-02-15.md
@@ -276,3 +276,30 @@
 - 验证结果：
   - `cd openclaw && pnpm exec vitest run extensions/savc-orchestrator/src/tool-spawn-expert.test.ts`：PASS（7 tests）
   - `bash scripts/test_phase6.sh`：PASS（24 PASS, 0 FAIL）
+
+## 记录 12
+
+- 对话目标：继续 Phase 6，补齐 `savc_agent_status` 轮询场景的 Live2D 信号桥接输出。
+- 执行内容：
+  - 更新 `openclaw/extensions/savc-orchestrator/src/tool-agent-status.ts`：
+    - 在 `status=completed` 时自动构建 `live2d` 字段（`attempted/source/emotion/interactionType/signal/error`）。
+    - 优先走 `buildLive2DPlan`，回退 `buildLive2DSignal`，并保证失败不影响状态查询主流程。
+    - 保持原有兼容：`details.data.status` 等既有字段不变，仅新增 `details.data.live2d`。
+  - 更新 `openclaw/extensions/savc-orchestrator/src/tool-agent-status.test.ts`：
+    - 增加 completed 状态的 `live2d` 断言。
+    - 增加 `loadLive2DModule` 失败容错断言。
+  - 更新 `scripts/test_phase6.sh`：
+    - 增加 `savc_agent_status` 调用及 `live2d.signal` 验收断言。
+  - 更新文档：
+    - `openclaw/extensions/savc-orchestrator/README.md` 增加 `savc_agent_status` 的 `live2d` 字段说明。
+    - `tests/phase6-test-report.md` 增加状态轮询桥接验收项。
+- 修改文件：
+  - `openclaw/extensions/savc-orchestrator/src/tool-agent-status.ts`（更新）
+  - `openclaw/extensions/savc-orchestrator/src/tool-agent-status.test.ts`（更新）
+  - `scripts/test_phase6.sh`（更新）
+  - `openclaw/extensions/savc-orchestrator/README.md`（更新）
+  - `tests/phase6-test-report.md`（更新）
+  - `docs/worklog/2026-02-15.md`（更新）
+- 验证结果：
+  - `cd openclaw && pnpm exec vitest run extensions/savc-orchestrator/src/tool-agent-status.test.ts`：PASS（6 tests）
+  - `bash scripts/test_phase6.sh`：PASS（26 PASS, 0 FAIL）
