fix(phase6): prioritize specific live2d keywords in routing

--- a/docs/worklog/2026-02-15.md
+++ b/docs/worklog/2026-02-15.md
@@ -303,3 +303,23 @@
 - 验证结果：
   - `cd openclaw && pnpm exec vitest run extensions/savc-orchestrator/src/tool-agent-status.test.ts`：PASS（6 tests）
   - `bash scripts/test_phase6.sh`：PASS（26 PASS, 0 FAIL）
+
+## 记录 13
+
+- 对话目标：继续 Phase 6，修正 Live2D+Voice 混合语句在关键词层被 `voice` 抢路由的问题。
+- 执行内容：
+  - 更新 `savc-core/orchestrator/registry.mjs`：
+    - `matchByKeyword` 的包含匹配从“仅按声明顺序”改为“优先更长关键词，再按关键词顺序”。
+    - 使 `点击模型` 这类更具体语义优先于泛词 `语音`，减少混合请求误路由。
+  - 更新测试：
+    - `tests/orchestrator/registry.test.mjs` 新增混合语句断言：`点击模型并语音播报一句欢迎回来 -> live2d`。
+    - `tests/orchestrator/router.test.mjs` 保留并通过同场景断言，验证路由层行为一致。
+- 修改文件：
+  - `savc-core/orchestrator/registry.mjs`（更新）
+  - `tests/orchestrator/registry.test.mjs`（更新）
+  - `tests/orchestrator/router.test.mjs`（更新）
+  - `docs/worklog/2026-02-15.md`（更新）
+- 验证结果：
+  - `node tests/orchestrator/registry.test.mjs`：PASS
+  - `node tests/orchestrator/router.test.mjs`：PASS
+  - `bash scripts/test_phase6.sh`：PASS（26 PASS, 0 FAIL）
