feat(phase6): unify live2d voice and interaction channel

--- a/docs/worklog/2026-02-16.md
+++ b/docs/worklog/2026-02-16.md
@@ -36,3 +36,51 @@
   - `node tests/orchestrator/live2d.test.mjs`：PASS
   - `node tests/orchestrator/live2d-voice-chain.test.mjs`：PASS
   - `bash scripts/test_phase6.sh`：PASS（`PASS: 26, FAIL: 0`）
+
+## 记录 03
+
+- 对话目标：按顺序推进下一步，完成 M-F1（前端 runtime 模型加载与渲染）并保持交互链路可用。
+- 执行内容：
+  - 新增 `savc-ui/src/ui/live2d-runtime.ts`：
+    - 实现可持续渲染的前端 runtime（Canvas 2D），包含待机状态、情绪表情过渡、口型帧消费、动作脉冲。
+    - 支持从模型清单加载主题参数（manifest），并在状态面板回显 `model/mode/source/emotion/motion`。
+  - 新增 `savc-ui/public/live2d/yuanyuan-lite.model.json` 作为默认模型清单。
+  - 更新 `savc-ui/src/ui/views/orchestrator.ts`：
+    - 增加 `Live2D Runtime（M-F1）` 卡片与画布舞台。
+    - 将交互桥接返回信号直接驱动 runtime。
+- 修改文件：
+  - `savc-ui/src/ui/live2d-runtime.ts`（新增）
+  - `savc-ui/public/live2d/yuanyuan-lite.model.json`（新增）
+  - `savc-ui/src/ui/views/orchestrator.ts`（更新）
+- 验证结果：
+  - `pnpm --dir savc-ui build`：PASS
+  - `bash scripts/test_phase6.sh`：PASS（`PASS: 26, FAIL: 0`）
+
+## 记录 04
+
+- 对话目标：继续顺序推进，完成 M-F5 pre-integration（语音+交互信号前端统一通道）。
+- 执行内容：
+  - 重构 `savc-ui/src/ui/live2d-bridge.ts`：
+    - 新增统一调用 `invokeLive2DSignal`。
+    - 新增 `invokeLive2DVoice`（语音源），支持 `message/emotion/energy` 参数。
+    - mock 分支新增语音口型帧生成，保持 gateway/mock 双路径一致结构。
+  - 新增 `savc-ui/src/ui/live2d-channel.ts`：
+    - 定义前端统一事件通道，聚合 `interaction + voice` 信号。
+    - 提供发布、订阅、快照读取能力，供 runtime 与页面状态统一消费。
+  - 更新 `savc-ui/src/ui/views/orchestrator.ts`：
+    - 接入通道订阅并由 active event 驱动 runtime。
+    - 新增语音信号输入区（文本/情绪/energy），并与交互信号统一入通道。
+    - 列表改为通道事件时间线，支持来源区分和状态回显。
+  - 更新文档状态：
+    - `README.md`、`docs/SAVC功能拓展路线图.md`、`tests/phase6-test-report.md`。
+- 修改文件：
+  - `savc-ui/src/ui/live2d-bridge.ts`（更新）
+  - `savc-ui/src/ui/live2d-channel.ts`（新增）
+  - `savc-ui/src/ui/views/orchestrator.ts`（更新）
+  - `README.md`（更新）
+  - `docs/SAVC功能拓展路线图.md`（更新）
+  - `tests/phase6-test-report.md`（更新）
+  - `docs/worklog/2026-02-16.md`（更新）
+- 验证结果：
+  - `pnpm --dir savc-ui build`：PASS
+  - `bash scripts/test_phase6.sh`：PASS（`PASS: 26, FAIL: 0`）
