feat(phase6): integrate chat tab with live2d channel

--- a/docs/worklog/2026-02-16.md
+++ b/docs/worklog/2026-02-16.md
@@ -84,3 +84,31 @@
 - 验证结果：
   - `pnpm --dir savc-ui build`：PASS
   - `bash scripts/test_phase6.sh`：PASS（`PASS: 26, FAIL: 0`）
+
+## 记录 05
+
+- 对话目标：继续推进后续开发，补齐 M-F5 的“对话 + 语音 + Live2D”管理界面闭环。
+- 执行内容：
+  - 新增 `savc-ui/src/ui/views/chat.ts`：
+    - 实现 chat 标签页可用视图（文本发送、回复渲染、状态反馈）。
+    - 接入浏览器 `speechSynthesis` 语音播报（可开关）。
+    - 将 assistant 文本与语音事件分别映射为 `text/voice` Live2D 信号并发布到统一通道。
+    - 在 chat 页内嵌 Live2D runtime 舞台，实时消费通道信号。
+  - 更新 `savc-ui/src/ui/app.ts`：
+    - 将 `chat` tab 从占位页切换为真实视图渲染。
+  - 更新 `scripts/test_phase6.sh`：
+    - 增加 UI 集成文件存在性检查。
+    - 增加 `savc-ui` 构建验证步骤，纳入 Phase 6 自动化脚本。
+  - 更新文档：
+    - `README.md`、`docs/SAVC功能拓展路线图.md`、`tests/phase6-test-report.md` 同步 M-F5 管理界面闭环进展。
+- 修改文件：
+  - `savc-ui/src/ui/views/chat.ts`（新增）
+  - `savc-ui/src/ui/app.ts`（更新）
+  - `scripts/test_phase6.sh`（更新）
+  - `README.md`（更新）
+  - `docs/SAVC功能拓展路线图.md`（更新）
+  - `tests/phase6-test-report.md`（更新）
+  - `docs/worklog/2026-02-16.md`（更新）
+- 验证结果：
+  - `pnpm --dir savc-ui build`：PASS
+  - `bash scripts/test_phase6.sh`：PASS（`PASS: 30, FAIL: 0`）
