feat(savc-ui): wire logs tab to gateway WS and polish UI

--- a/docs/worklog/2026-02-14.md
+++ b/docs/worklog/2026-02-14.md
@@ -51,3 +51,32 @@
   - `bash -n scripts/llm_enable_failover.sh scripts/setup.sh scripts/dev.sh scripts/openclaw.sh`：PASS
   - `bash scripts/llm_enable_failover.sh --dry-run`：PASS（输出包含 anyrouter+wzw providers 与目标 fallback 链）
   - `bash scripts/llm_enable_failover.sh`：PASS（已写入并生成备份）
+
+## 记录 04
+
+- 对话目标：确认新增 API Key 是否已正确写入 `config/.env.local` 并可用于多 Provider 降级链。
+- 执行内容：
+  - 检查 `config/.env.local` 中 `ANYROUTER_API_KEY` / `WZW_API_KEY` / `OPENAI_API_KEY` 的填写状态（不回显明文）。
+  - 检查 `~/.openclaw/openclaw.json` 当前主模型、fallback 数量与 provider 列表。
+  - 检查 `~/.openclaw/.env` 的同步状态。
+- 修改文件：
+  - `docs/worklog/2026-02-14.md`（更新）
+- 验证结果：
+  - `ANYROUTER_API_KEY`: set
+  - `WZW_API_KEY`: empty（尚未填写）
+  - `OPENAI_API_KEY`: set
+  - 运行时配置仍为 `primary=anyrouter/claude-opus-4-6`，`fallbacks=4`，`providers=anyrouter,wzw`
+
+## 记录 05
+
+- 对话目标：确认补充 `WZW_API_KEY` 后多 Provider 降级链是否可用。
+- 执行内容：
+  - 再次检查 `config/.env.local` 中关键 key 的填写状态。
+  - 执行 `openclaw models fallbacks list` 与 `openclaw models status` 验证主模型与回退链。
+- 修改文件：
+  - `docs/worklog/2026-02-14.md`（更新）
+- 验证结果：
+  - `ANYROUTER_API_KEY`: set
+  - `WZW_API_KEY`: set
+  - `OPENAI_API_KEY`: set
+  - `models status` 显示：`primary=anyrouter/claude-opus-4-6`，`fallbacks=4`，且包含 `wzw/*` 三级兜底链路。
