fix(savc-ui): make progress hub navigation resilient

--- a/docs/worklog/2026-02-18.md
+++ b/docs/worklog/2026-02-18.md
@@ -553,3 +553,158 @@
   - `git status --short` 显示代码与脚本类改动已清空，仅剩文档/日志相关文件待提交。
 - 备注:
   - 提交遵循“单一职责 + 可回滚”的分组策略，便于后续审阅与回退。
+
+## 34) Live2D 交互实现现状梳理与改造讨论
+- 对话目标: 与用户探讨 Live2D 交互实现，明确当前链路能力、关键缺口与下一步落地顺序。
+- 执行内容:
+  - 梳理 Phase 6 当前实现链路：
+    - 信号生成层：`savc-core/orchestrator/live2d.mjs`
+    - 工具层：`openclaw/extensions/savc-orchestrator/src/tool-live2d-signal.ts`
+    - 前端桥接层：`savc-ui/src/ui/live2d-bridge.ts`
+    - 前端通道层：`savc-ui/src/ui/live2d-channel.ts`
+    - 运行时渲染层：`savc-ui/src/ui/live2d-runtime.ts`
+    - 交互入口：`savc-ui/src/ui/views/orchestrator.ts` 与 `savc-ui/src/ui/views/chat.ts`
+  - 确认当前关键协议不一致点：
+    - 后端 `lipSync` 为对象帧（`{ tMs, mouthOpen }`），前端桥接按 number 数组解析，网关模式下会丢失口型帧。
+    - 后端表达参数使用 `browDown/headTilt`，前端运行时消费 `browTilt`，导致眉部细节映射不完整。
+  - 形成改造建议：先统一信号协议（兼容旧版），再推进真实 Cubism 渲染与事件编排增强。
+- 修改文件:
+  - `docs/worklog/2026-02-18.md`
+- 验证结果:
+  - 代码检查确认链路存在与字段差异（见上述文件）。
+  - `node --input-type=module` 运行 `buildLive2DSignal({source:'voice'})`，确认 `lipSync` 当前为对象帧结构。
+- 备注:
+  - 当前前端在 `auto` 模式下会回退 mock，因此“看起来可动”不代表网关信号完全按预期被消费。
+
+## 35) 统一交互页面方向讨论（多渠道对话入口整合）
+- 对话目标: 评估是否应建设统一交互页面，替代当前 OpenClaw WebUI / savc-ui / Discord / Telegram 分散交互带来的开发体验不足。
+- 执行内容:
+  - 明确结论：应建设“统一交互工作台”，作为开发主入口；现有各入口保留但定位下沉（运维/外部渠道接入）。
+  - 梳理页面职责边界：仅负责多场景交互（文本/语音/任务）与基础 custom 设置，不承担后台运维与系统管理。
+  - 给出落地优先级：先做统一会话与工具调用可观测，再补渠道聚合与情景模板，最后接入更重的开发者工作流能力。
+- 修改文件:
+  - `docs/worklog/2026-02-18.md`
+- 验证结果:
+  - 未执行（架构讨论阶段）。
+- 备注:
+  - 下一步可直接产出该页面的 PRD + 信息架构 + MVP 实现清单，并落地到 `savc-ui` 独立路由。
+
+## 36) 输出“统一交互工作台”详细规划并写入 docs
+- 对话目标: 用户要求“详细规划一下，并写份开发计划到 docs 中”。
+- 执行内容:
+  - 新建 `docs/SAVC统一交互工作台开发计划.md`，形成完整专项计划文档。
+  - 文档覆盖：背景问题、目标/非目标、IA、功能优先级（P0/P1/P2）、技术架构、接口设计、数据模型、Live2D/语音对齐、分阶段里程碑（W0-W4）、测试验收、风险与决策项。
+  - 计划时间窗给出明确日期：`2026-02-19` 至 `2026-03-06`。
+- 修改文件:
+  - `docs/SAVC统一交互工作台开发计划.md`（新增）
+  - `docs/worklog/2026-02-18.md`
+- 验证结果:
+  - 通过 `sed` 读取新文档确认内容落盘且结构完整。
+  - `git status --short` 显示新文档已创建、工作日志已更新。
+- 备注:
+  - 当前为规划文档输出阶段，尚未开始实现代码改造。
+
+## 37) 排查并修复 `tests/glmtest` 原型无法正常启动
+- 对话目标: 用户反馈 `tests/glmtest` 项目原型无法正常启动，要求定位并修复。
+- 执行内容:
+  - 复现启动流程：`pnpm --dir tests/glmtest install`、`pnpm --dir tests/glmtest dev`。
+  - 复现到首个根因：`Port 5175 is already in use`，定位到占用进程为历史 `vite`（PID `1950291`）。
+  - 发现访问路径问题：`/workbench/` 返回 `404`，仅 `/workbench/index.html` 可访问。
+  - 修复中间件路由：`/`、`/workbench`、`/workbench/` 重定向至 `/workbench/index.html`。
+  - 更新 `README`：补充端口占用排障命令。
+  - 发现并修复构建问题：`pnpm build` 报 `Could not resolve entry module "index.html"`，新增根入口 `tests/glmtest/index.html` 用于重定向到工作台页面。
+- 修改文件:
+  - `tests/glmtest/server/middleware.ts`
+  - `tests/glmtest/README.md`
+  - `tests/glmtest/index.html`
+  - `docs/worklog/2026-02-18.md`
+- 验证结果:
+  - `pnpm --dir tests/glmtest dev` 可正常启动（`http://localhost:5175/`）。
+  - `GET /workbench/` 返回 `302 -> /workbench/index.html`（不再 404）。
+  - `GET /__savc/workbench/snapshot` 返回合法 JSON。
+  - `pnpm --dir tests/glmtest build` 通过。
+- 备注:
+  - 当前环境已拉起一个 `glmtest` dev 实例监听 `5175`，可直接访问体验。
+
+## 38) 启动并确认 `tests/glmtest` 原型服务在线
+- 对话目标: 用户要求“启动一下”原型服务。
+- 执行内容:
+  - 检查 `5175` 端口监听状态，确认服务已在运行。
+  - 校验 `http://127.0.0.1:5175/workbench/` 可访问（重定向到 `/workbench/index.html`）。
+  - 查看 `/tmp/glmtest-dev.log`，确认 Vite dev server 就绪并输出本地访问地址。
+- 修改文件:
+  - `docs/worklog/2026-02-18.md`
+- 验证结果:
+  - 端口状态：`LISTENING`（`:5175`）。
+  - `GET /workbench/` 返回 `302` 且 `Location: /workbench/index.html`（预期）。
+  - 日志显示 `VITE v5.4.21 ready`，本地地址 `http://localhost:5175/`。
+- 备注:
+  - 当前无需重复拉起进程，可直接打开页面使用。
+
+## 39) 新建 `tests/codex-test` 并实现统一交互工作台原型
+- 对话目标: 用户要求在 `tests` 下创建 `codex-test` 文件夹，并落地“统一交互页面”原型。
+- 执行内容:
+  - 新建独立原型目录 `tests/codex-test`，与主项目隔离。
+  - 实现 Vite 独立服务（端口 `5176`）与 workbench mock 中间件。
+  - 原型页面实现三栏工作台与四个核心分区：`交互 / 执行 / 上下文 / 设置`。
+  - 落地关键交互能力：
+    - 场景模式切换（`companion/dev/debug/plan`）
+    - 会话列表与过滤
+    - 对话发送与结构化回复（mock）
+    - 工具轨迹可视化（queued/running/completed/failed）
+    - 基础 custom 设置保存（mock 内存）
+    - SSE 实时推送刷新
+  - 修复依赖与构建可用性：补齐本地 devDependencies，保证 `build` 可通过。
+- 修改文件:
+  - `tests/codex-test/package.json`
+  - `tests/codex-test/tsconfig.json`
+  - `tests/codex-test/vite.config.ts`
+  - `tests/codex-test/index.html`
+  - `tests/codex-test/README.md`
+  - `tests/codex-test/src/types.ts`
+  - `tests/codex-test/src/mock-data.ts`
+  - `tests/codex-test/server/middleware.ts`
+  - `tests/codex-test/public/workbench/index.html`
+  - `tests/codex-test/public/workbench/styles.css`
+  - `tests/codex-test/public/workbench/app.js`
+  - `docs/worklog/2026-02-18.md`
+- 验证结果:
+  - `pnpm --dir tests/codex-test exec tsc -p tsconfig.json --noEmit`：通过。
+  - `pnpm --dir tests/codex-test build`：通过。
+  - `pnpm --dir tests/codex-test dev`：成功启动（`http://localhost:5176/`）。
+  - `GET /workbench/`：返回 `302 -> /workbench/index.html`（符合预期）。
+  - `GET /__savc/workbench/snapshot`：返回合法 JSON。
+  - `GET /__savc/workbench/stream`：收到 `event: snapshot`。
+- 备注:
+  - 当前原型为独立 mock 工作台，后续可按 `docs/SAVC统一交互工作台开发计划.md` 逐步替换为真实网关数据。
+
+## 40) 启动并确认 `tests/codex-test` 服务可访问
+- 对话目标: 用户要求“先启动服务看效果”。
+- 执行内容:
+  - 检查 `5176` 端口旧进程状态，发现历史监听不可用后重新拉起 `tests/codex-test`。
+  - 以前台会话方式启动 `pnpm dev -- --host 0.0.0.0 --port 5176`，避免后台被回收。
+  - 通过本机直连探测确认路由：`/` 与 `/workbench/` 返回 `302`，`/workbench/index.html` 返回 `200`。
+- 修改文件:
+  - `docs/worklog/2026-02-18.md`
+- 验证结果:
+  - Vite 启动日志显示 `ready`，地址 `http://localhost:5176/`。
+  - `curl --noproxy '*' http://127.0.0.1:5176/workbench/index.html` 返回 `200`。
+- 备注:
+  - 当前 shell 默认走代理，验证本机端口需带 `--noproxy '*'`。
+
+## 41) 修复“推进看板无法正常跳转”并恢复服务
+- 对话目标: 解决 savc-ui 侧栏点击“推进看板”后无法进入独立页面的问题。
+- 执行内容:
+  - 排查发现 `:5174` 当时未监听，先启动并恢复 `savc-ui` 服务。
+  - 调整跳转逻辑：`progress-hub` 入口改为基于 `window.location.origin` 的绝对路径，避免相对路径在不同 URL 场景下解析偏差。
+  - 增加弹窗兜底：若 `window.open` 被浏览器策略拦截，则改为当前页 `window.location.assign(...)`，确保点击必达。
+  - 重启 `savc-ui` 并验证 `progress-hub` 页面可访问。
+- 修改文件:
+  - `savc-ui/src/ui/app.ts`
+  - `docs/worklog/2026-02-18.md`
+- 验证结果:
+  - `bash scripts/savc_ui_service.sh restart` 成功，`:5174` 监听恢复。
+  - `GET /progress-hub/index.html` 返回 `200`。
+  - `pnpm --dir savc-ui exec tsc -p tsconfig.json --noEmit` 通过。
+- 备注:
+  - 本地 shell 启用了代理，探测本机地址时需使用 `curl --noproxy '*'`。
